<resources>
    <string name="app_name">Drinks2u_v1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Santiago Huh</string>
    <string name="nav_header_subtitle">ayrancan619@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>
    <string name="menu_inicio">Inicio</string>
    <string name="boton_pago">Pagos</string>
    <string name="boton_pedido">Pedidos</string>
    <string name="boton_noti">Notificaciones</string>
    <string name="boton_cuenta">Mi Cuenta</string>
    <string name="boton_config">Configuraciones</string>
    <string name="boton_report">Reportar</string>
    <string name="cargando">Cargando...</string>
    <string name="text_wel">Bienvenido</string>
    <string name="txt_wel">Bienvenido</string>
    <string name="des">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Añadir</string>
    <string name="search">Buscar</string>
    <string name="card_title">Ejemplo Titulo</string>
    <string name="card_content">Esto contiene el contenido de todo lo que llevara la descripción  del producto.</string>
    <string name="action_view">Detalles</string>
    <string name="action_carrito">Agregar a Carrito</string>
    <string name="comprar">Compra Directa</string>
    <string name="comprar">Compra Directa</string>
</resources>
