<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/textprod1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/card_title"
                    android:textColor="#000"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:scaleType="centerInside"
                android:src="@drawable/corona" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_action_payment"
                    android:drawablePadding="8dp"
                    android:paddingLeft="6dp"
                    android:paddingRight="3dp"
                    android:text="@string/comprar" />

                <Button
                    android:id="@+id/btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableLeft="@drawable/ic_action_shop"
                    android:drawablePadding="8dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="4dp"
                    android:text="@string/action_carrito" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Productos Relacionados"
                    android:textSize="30dp"
                    android:textColor="#1b989b"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/corona"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <TextView
                            android:id="@+id/textprod3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/card_title"
                            android:textColor="#000"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/textprod4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_content"
                            android:textColor="#555"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_view"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="6dp"
                            android:paddingRight="3dp"
                            android:drawableLeft="@drawable/ic_action_eye"
                            android:drawablePadding="8dp"/>

                        <Button
                            android:id="@+id/btn5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_carrito"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="10dp"
                            android:paddingRight="4dp"
                            android:drawableLeft="@drawable/ic_action_shop"
                            android:drawablePadding="8dp"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>