<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragHome"
    android:orientation="vertical">

    <!--Este es uno de los 7 fragmentos que apareceran cuando se
    de clic en algunas de las opciones que se vieron en
    el activity_main_drawer.xml-->

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">
                <ImageSwitcher
                    android:id="@+id/slide"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">
                </ImageSwitcher>
            </LinearLayout>
        </RelativeLayout>

            <!--<ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/banner" />-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/corona"/>
                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:text="@string/card_title"
                            android:textColor="#000"
                            android:textSize="18sp"/>
                        
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_content"
                            android:textColor="#555"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_view"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="6dp"
                            android:paddingRight="3dp"
                            android:drawableLeft="@drawable/ic_action_eye"
                            android:drawablePadding="8dp"/>

                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_carrito"
                            android:background="?android:attr/selectableItemBackground"
                            android:paddingLeft="10dp"
                            android:paddingRight="4dp"
                            android:drawableLeft="@drawable/ic_action_shop"
                            android:drawablePadding="8dp"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="160dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/tecateoriginal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="16dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:text="@string/card_title"
                                android:textColor="#000"
                                android:textSize="18sp"/>

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/card_content"
                                android:textColor="#555"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/action_view"
                                android:background="?android:attr/selectableItemBackground"
                                android:paddingLeft="6dp"
                                android:paddingRight="3dp"
                                android:drawableLeft="@drawable/ic_action_eye"
                                android:drawablePadding="8dp"/>

                            <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/action_carrito"
                                android:background="?android:attr/selectableItemBackground"
                                android:paddingLeft="10dp"
                                android:paddingRight="4dp"
                                android:drawableLeft="@drawable/ic_action_shop"
                                android:drawablePadding="8dp" />
                        </LinearLayout>
                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>